aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medassist-api-svc
  namespace: medassist
spec:
  selector:
    app: medassist-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
